--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">Dr. Fabian Stöckl</a></h1>
+        <h1>Dr. Fabian Stöckl</h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
