--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,7 @@
 
 @import "{{ site.theme }}";
 .main-content {
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   h6 {
-   color: #FFD700;
+   h1 {
+   color: #ffff00;
  }
 }
