--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Dr. Fabian Stöckl</h1>
+        <h1>Dr. Fabian Stöckl</h1></br>
 		<h2>Economist</h2>
         
         {% if site.logo %}
