--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         <h1>Dr. Fabian Stöckl</h1></br>
-		<h2>Economist</h2>
+		<h2>Economistö</h2>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
