--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Dr. Fabian Stöckl</h1></br>
-		<h2>Economist</h2>
+        <h1>Dr. Fabian Stöckl</br><h2>Economist</h2></h1>
+		
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
