--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Dr. Fabian Stöckl</br><h2>Economist</h2></h1>
+        <h1>Dr. Fabian Stöckl</br><h2>Economistt</h2></h1>
 		
         
         {% if site.logo %}
