--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Dr. Fabian Stöckl</br><h2>Economistt</h2></h1>
+	  <div style="white-space: pre">
+        <h1>Dr. Fabian Stöckl</h1>
+		<h2>Economistt</h2>
+		</div>
 		
         
         {% if site.logo %}
