--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <header>
 	  <div style="white-space: pre">
         <h1>Dr. Fabian Stöckl</h1>
-		<h2>Economistt</h2>
+		<h2>Economisttt</h2>
 		</div>
 		
         
