--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,22 +9,13 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-	
-	<style>
-        p span {
-            display: block;
-        }
-    </style>
-	
+    <![endif]-->	
   </head>
   <body>
     <div class="wrapper">
       <header>
-	  <p>
-        <span><h1>Dr. Fabian Stöckl</h1></span>
-		<span><h2>Economistü</h2></span>
-	  </p>
+        <h1><strong><span style="font-size:36px">Dr. Fabian St&ouml;ckl</span></strong><br />
+		<em><span style="font-size:18px">Economist</span></em></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
