--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><span style="color:#1a2154"><strong><span style="font-size:32px">Dr. Fabian St&ouml;ckl</span></strong></span><br />
+        <h1><span style="color:#1a2154"><strong><span style="font-size:32px">Dr. Nabian St&ouml;ckl</span></strong></span><br />
 		<em><span style="font-size:18px">Economist</span></em></h1>
         
         {% if site.logo %}
