--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><strong><span style="font-size:32px" style="color:#1a2154">Dr. Nabian St&ouml;ckl</span></strong><br />
-		<em><span style="font-size:18px">Economisti</span></em></h1>
+        <h1><strong><span style="font-size:32px">Dr. Nabian St&ouml;ckl</span></strong><br />
+		<em><span style="font-size:18px">Economistio</span></em></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
