--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><span style="color:#1abc9c"><strong><span style="font-size:36px">Dr. Fabian St&ouml;ckl</span></strong><br />
-<em><span style="font-size:18px">Economist</span></em></span></h1>
+        <p><span style="color:#1abc9c"><strong><span style="font-size:32px">Dr. Fabian St&ouml;ckl</span></strong><br />
+		<em><span style="font-size:18px">Economist</span></em></span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
