--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header>
         <p><span style="color:#1abc9c"><strong><span style="font-size:32px">Dr. Fabian St&ouml;ckl</span></strong><br />
-		<em><span style="font-size:18px">Economist</span></em></span></p>
+		<em><span style="font-size:18px">Economiste</span></em></span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
