--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <p><span style="color:#1abc9c"><strong><span style="font-size:32px">Dr. Fabian St&ouml;ckl</span></strong><br />
+        <p><span style="color:#1abc9c"><strong><span style="font-size:32px">Dr. Fabian Stäckl</span></strong><br />
 		<em><span style="font-size:18px">Economiste</span></em></span></p>
         
         {% if site.logo %}
