--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <p><span style="color:#1abc9c"><strong><span style="font-size:32px">Dr. Fabian Stäckl</span></strong><br />
-		<em><span style="font-size:18px">Economiste</span></em></span></p>
+        <p><span style="color:#f39c12"><strong><span style="font-size:36px">Dr. Fabian St&ouml;ckl</span></strong></span><br />
+		<span style="color:#1abc9c"><em><span style="font-size:18px">Economistm</span></em></span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
