--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <p><span style="color:#f39c12"><strong><span style="font-size:36px">Dr. Fabian St&ouml;ckl</span></strong></span><br />
-		<span style="color:#1abc9c"><em><span style="font-size:18px">Economistm</span></em></span></p>
+        <p><span style="font-size: 36px; color: rgb(97, 189, 109);">Fabian St&ouml;ckl<br></span><span style="font-size: 18px; color: rgb(251, 160, 38);">Economisto</span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
