--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <p><span style="font-size: 36px; color: rgb(97, 189, 109);">Fabian St&ouml;ckl<br></span><span style="font-size: 18px; color: rgb(251, 160, 38);">Economisto</span></p>
+		<p><span style="color:#008000;"><span style="font-size:36px;">Fabian St&ouml;ckl</span></span><br />
+		<span style="color:#40E0D0;"><span style="font-size:18px;">Economistia</span></span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
