--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
   <body>
     <div class="wrapper">
       <header>
-		<p><span style="color:#008000;"><span style="font-size:36px;">Fabian St&ouml;ckl</span></span><br />
-		<span style="color:#40E0D0;"><span style="font-size:18px;">Economistia</span></span></p>
+		<p><span style="color:#1a2154;"><span style="font-size:36px;">Dr. Fabian St&ouml;ckl</span></span><br />
+		<span style="color:#999999;"><em><span style="font-size:18px;">Economist</span></em></span></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
