--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
-        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:</strong><br />
-		fabian-stoeckl[at]hotmail[dot]com</span></span></span></p>
+		
+        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fabian-stoeckl[at]hotmail[dot]com</span></span></span></p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
