--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 		
         <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fabian-stoeckl[at]hotmail.com</span></span></span></p>
 		
-		<a href="https://twitter.com/FabianStoeckl?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="small" data-show-screen-name="false" data-show-count="false">Follow @FabianStoeckl</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		<a href="https://twitter.com/FabianStoeckl?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @FabianStoeckl</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
