--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 		
-        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fabian-stoeckl[at]hotmail.com</span></span></span></p>
+        </br><p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fabian-stoeckl[at]hotmail.com</span></span></span></p>
 		
 		<a href="https://twitter.com/FabianStoeckl?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @FabianStoeckl</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
