--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<meta name="title" content="Fabian Stöckl - Economist">
+	<meta name="description" content="Fabian Stöckl - Economist">
+	<meta name="keywords" content="energy,environmental,energy, elasticity of substitution,modeling,development,growth,DIW,Vivid Economics,German Institute for Economic Research,sustainability,green growth,clean,dirty">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="English">
+	<meta name="revisit-after" content="10 days">
+	<meta name="author" content="Fabian Stöckl">
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
