--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<meta name="title" content="Dr. Fabian Stöckl - Economist">
-	<meta name="description" content="Dr. Fabian Stöckl - Economist">
+	<meta name="description" content="Website">
 	<meta name="keywords" content="energy,environmental,energy, elasticity of substitution,modeling,development,growth,DIW,Vivid Economics,German Institute for Economic Research,sustainability,green growth,clean,dirty">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
