--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,14 @@
  
  
  section {
-  width:50px;
-  float:right;
+  width:500px;
+  float:left;
   padding-bottom:50px;
+}
+
+header {
+  width:70px;
+  float:left;
+  position:fixed;
+  -webkit-font-smoothing:subpixel-antialiased;
 }
