--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,13 +8,8 @@
  }
  
  
- .wrapper {
-  width:1060px;
-  margin:0 auto;
-}
-
 header {
-  width:270px;
+  width:170px;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
@@ -22,15 +17,19 @@ header {
 
 
 section {
-  width:700px;
+  width:600px;
   float:right;
   padding-bottom:50px;
 }
 
 footer {
-  width:270px;
+  width:170px;
   float:left;
   position:fixed;
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
+
+  header {
+    padding-right:220px;
+  }
