--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,3 +19,11 @@ section {
   float:right;
   padding-bottom:50px;
 }
+
+@media print, screen and (max-width: 960px) {
+
+  header {
+    padding-right:220px;
+  }
+  
+    }
