--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   <body>
     <div class="wrapper">
       <header>
-		<p><span style="color:#1a2154;"><span style="font-size:32px;">Dr. Fabian St&ouml;ckl</span></span><br />
+		<p><span style="color:#1a2154;"><span style="font-size:32px;">Dor. Fabian St&ouml;ckl</span></span><br />
 		<span style="color:#999999;"><em><span style="font-size:18px;">Economist</span></em></span></p>
         
         {% if site.logo %}
