--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   <body>
     <div class="wrapper">
       <header>
-		<p><span style="color:#1a2154;"><span style="font-size:32px;">Dor. Fabian St&ouml;ckl</span></span><br />
+		<p><span style="color:#1a2154;"><span style="font-size:30px;">Dr. Fabian St&ouml;ckl</span></span><br />
 		<span style="color:#999999;"><em><span style="font-size:18px;">Economist</span></em></span></p>
         
         {% if site.logo %}
@@ -34,7 +34,7 @@
 		
 		<p></p>
 		
-        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fstoeckl[at]diw[dot]de</span></span></span></p>
+        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong><br/>fstoeckl[at]diw[dot]de</span></span></span></p>
 		
 		<p style="text-align: center;"><a href="https://twitter.com/FabianStoeckl?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @FabianStoeckl</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 
