--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,12 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->	
+    <![endif]-->
+
+
+<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6070aff8b655eb0012793bf3&product=inline-follow-buttons" async="async"></script>
+
+	
   </head>
   <body>
     <div class="wrapper">
