--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
         <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong><br/>fstoeckl[at]diw[dot]de</span></span></span></p>
 		
 		<p style="text-align: center;"><a href="https://twitter.com/FabianStoeckl?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-show-count="false">Follow @FabianStoeckl</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+		
+		<div class="sharethis-inline-follow-buttons"></div>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
