--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 		
 		<p></p>
 		
-        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong><br/>fstoeckl[at]diw[dot]de</span></span></span></p>
+        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fstoeckl[at]diw[dot]de</span></span></span></p>
 		
 		
 		<div class="sharethis-inline-follow-buttons"></div>
