--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,9 @@
         <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong>fstoeckl[at]diw[dot]de</span></span></span></p>
 		
 		
+		<!-- ShareThis BEGIN -->
 		<div class="sharethis-inline-follow-buttons"></div>
+		<!-- ShareThis END -->
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
