--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 		<span style="color:#999999;"><em><span style="font-size:18px;">Economist</span></em></span></p>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Picture" />
         {% endif %}
 		
 		<p></p>
