--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	
 	
 	
-	<meta name="title" content="Dr. Fabian Stöckl | Economist">
+	<meta name="title" content="Dr. Fabian Stöckl |- Economist">
 	<meta name="description" content="blablabla">
 	<meta name="keywords" content="energy,environmental,energy, elasticity of substitution,modeling,development,growth,DIW,Vivid Economics,German Institute for Economic Research,sustainability,green growth,clean,dirty">
 	<meta name="robots" content="index, follow">
