--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 	
   </head>
   <body>
+  
+  <span data-nosnippet>
+  
     <div class="wrapper">
       <header>
 		<p><span style="color:#1a2154;"><span style="font-size:26px;">Dr.&nbsp;Fabian&nbsp;St&ouml;ckl</span></span><br />
@@ -68,5 +71,8 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+	
+	</span>
+	
   </body>
 </html>
