--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   
     <div class="wrapper">
       <header>
-		<p><span style="color:#1a2154;"><span style="font-size:26px;">De.&nbsp;Fabian&nbsp;St&ouml;ckl</span></span><br />
+		<p><span style="color:#1a2154;"><span style="font-size:26px;">Dr.&nbsp;Fabian&nbsp;St&ouml;ckl</span></span><br />
 		<span style="color:#999999;"><em><span style="font-size:18px;">Economist</span></em></span></p>
         
         {% if site.logo %}
