--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,8 @@
 		<div class="sharethis-inline-follow-buttons"></div>
 		
 		<br/>
+		
+		<img src = "/twitter.svg" width="50" height="50"/>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
