--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 		
 		<br/>
 		
-		<a href="http://www.orf.at"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/github.svg'" width="30" height="30"/></a>
+		<a href="http://www.orf.at"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/github.svg'" onmouseover="this.src='/twitter.svg'" width="30" height="30"/></a>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
