--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
 		<br/>
 		
 		<a href="http://www.orf.at"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="30" height="30"/></a>
+		<a href="http://www.orf.at"  target="_blank"><img src = "/researchgate.svg" onmouseover="this.src='/researchgateover.svg'" onmouseout="this.src='/researchgate.svg'" width="30" height="30"/></a>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
