--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 		
 		<br/>
 		
-		<a href="http://www.orf.at"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="30" height="30"/></a>
+		<a href="https://twitter.com/FabianStoeckl"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="30" height="30"/></a>
 		<a href="http://www.orf.at"  target="_blank"><img src = "/researchgate.svg" onmouseover="this.src='/researchgateover.svg'" onmouseout="this.src='/researchgate.svg'" width="30" height="30"/></a>
 
         {% if site.github.is_project_page %}
