--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,7 @@
 		<a href="https://twitter.com/FabianStoeckl"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="30" height="30"/></a>
 		<a href="https://www.researchgate.net/profile/Fabian-Stoeckl-3"  target="_blank"><img src = "/researchgate.svg" onmouseover="this.src='/researchgateover.svg'" onmouseout="this.src='/researchgate.svg'" width="30" height="30"/></a>
 		<a href="https://scholar.google.com/citations?user=aPcI00QAAAAJ&hl=de"  target="_blank"><img src = "/googlescholar.svg" onmouseover="this.src='/googlescholarover.svg'" onmouseout="this.src='/googlescholar.svg'" width="30" height="30"/></a>
+		<a href="https://www.linkedin.com/in/fabian-stoeckl/"  target="_blank"><img src = "/linkedin.svg" onmouseover="this.src='/linkedinover.svg'" onmouseout="this.src='/linkedinscholar.svg'" width="30" height="30"/></a>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
