--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,6 @@
     <![endif]-->
 
 
-<script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6070b561f6067000116b0ba3&product=inline-follow-buttons" async="async"></script>
-
-
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -65,14 +62,12 @@
 		
 		<br/>
 		
-		<div class="sharethis-inline-follow-buttons"></div>
-		
-		<br/>
 		
 		<a href="https://twitter.com/FabianStoeckl"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="30" height="30"/></a>
 		<a href="https://www.researchgate.net/profile/Fabian-Stoeckl-3"  target="_blank"><img src = "/researchgate.svg" onmouseover="this.src='/researchgateover.svg'" onmouseout="this.src='/researchgate.svg'" width="30" height="30"/></a>
 		<a href="https://scholar.google.com/citations?user=aPcI00QAAAAJ&hl=de"  target="_blank"><img src = "/googlescholar.svg" onmouseover="this.src='/googlescholarover.svg'" onmouseout="this.src='/googlescholar.svg'" width="30" height="30"/></a>
-		<a href="https://www.linkedin.com/in/fabian-stoeckl/"  target="_blank"><img src = "/linkedin.svg" onmouseover="this.src='/linkedinover.svg'" onmouseout="this.src='/linkedinscholar.svg'" width="30" height="30"/></a>
+		<a href="https://www.linkedin.com/in/fabian-stoeckl/"  target="_blank"><img src = "/linkedin.svg" onmouseover="this.src='/linkedinover.svg'" onmouseout="this.src='/linkedin.svg'" width="30" height="30"/></a>
+		<a href="https://github.com/fabian-stoeckl"  target="_blank"><img src = "/github.svg" onmouseover="this.src='/githubover.svg'" onmouseout="this.src='/github.svg'" width="30" height="30"/></a>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
