--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,7 @@
 		<a href="https://scholar.google.com/citations?user=aPcI00QAAAAJ&hl=de"  target="_blank"><img src = "/googlescholar.svg" onmouseover="this.src='/googlescholarover.svg'" onmouseout="this.src='/googlescholar.svg'" width="25" height="25"/></a>
 		<a href="https://www.linkedin.com/in/fabian-stoeckl/"  target="_blank"><img src = "/linkedin.svg" onmouseover="this.src='/linkedinover.svg'" onmouseout="this.src='/linkedin.svg'" width="25" height="25"/></a>
 		<a href="https://github.com/fabian-stoeckl"  target="_blank"><img src = "/github.svg" onmouseover="this.src='/githubover.svg'" onmouseout="this.src='/github.svg'" width="25" height="25"/></a>
+		<a href="https://orcid.org/0000-0002-6759-0493"  target="_blank"><img src = "/orcid.svg" onmouseover="this.src='/orcidover.svg'" onmouseout="this.src='/orcid.svg'" width="25" height="25"/></a>
 		</p>
 
         {% if site.github.is_project_page %}
