--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,17 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
+.snowflake {
+  position: fixed;
+  background-color: #CCC;
+  user-select: none;
+  z-index: 1000;
+  pointer-events: none;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+}
+
 	
   </head>
   <body>
