--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 		
 		<p></p>
 		
-        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong><br>fabian-stoeckl[at]outlook[dot]com</span></span></span></p>
+        <p><span style="color:#1a2154;"><span style="font-size:18px;"><span style="font-size:14px;"><strong>Email:&nbsp;</strong><br>fabian-stoeckl[at]outlook.com</span></span></span></p>
 		
 		<br/>
 		
