general vivid updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	
 	
 	<meta name="title" content="Dr. Fabian Stöckl | Economist">
-	<meta name="description" content="Dr. Fabian Stöckl - Economist - Topcis: Growth, Development, and Environment - German Institute for Economic Research">
+	<meta name="description" content="Dr. Fabian Stöckl - Economist - Topcis: Growth, Development, and Environment - Vivid Economics (McKinsey); former: German Institute for Economic Research">
 	<meta name="keywords" content="energy,environmental,energy, elasticity of substitution,modeling,development,growth,DIW,Vivid Economics,German Institute for Economic Research,sustainability,green growth,clean,dirty">
 	<meta name="robots" content="index, follow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
