--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 		<p style="text-align: center;">
 		<a href="https://twitter.com/FabianStoeckl"  target="_blank"><img src = "/twitter.svg" onmouseover="this.src='/twitterover.svg'" onmouseout="this.src='/twitter.svg'" width="25" height="25"/></a>
 		<a href="https://www.researchgate.net/profile/Fabian-Stoeckl-3"  target="_blank"><img src = "/researchgate.svg" onmouseover="this.src='/researchgateover.svg'" onmouseout="this.src='/researchgate.svg'" width="25" height="25"/></a>
-		<a href="https://scholar.google.com/citations?user=aPcI00QAAAAJ&hl=de"  target="_blank"><img src = "/googlescholar.svg" onmouseover="this.src='/googlescholarover.svg'" onmouseout="this.src='/googlescholar.svg'" width="25" height="25"/></a>
+		<a href="https://scholar.google.com/citations?user=wNCF_gEAAAAJ&hl=de&oi=sra"  target="_blank"><img src = "/googlescholar.svg" onmouseover="this.src='/googlescholarover.svg'" onmouseout="this.src='/googlescholar.svg'" width="25" height="25"/></a>
 		<a href="https://www.linkedin.com/in/fabian-stoeckl/"  target="_blank"><img src = "/linkedin.svg" onmouseover="this.src='/linkedinover.svg'" onmouseout="this.src='/linkedin.svg'" width="25" height="25"/></a>
 		<a href="https://github.com/fabian-stoeckl"  target="_blank"><img src = "/github.svg" onmouseover="this.src='/githubover.svg'" onmouseout="this.src='/github.svg'" width="25" height="25"/></a>
 		<a href="https://orcid.org/0000-0002-6759-0493"  target="_blank"><img src = "/orcid.svg" onmouseover="this.src='/orcidover.svg'" onmouseout="this.src='/orcid.svg'" width="25" height="25"/></a>
